# mrpt-performance-tests

./: CMakeLists.txt  LICENSE  README.md
mrpt-perfdata2html/: CMakeLists.txt  mrpt-perfdata2html-main.cpp
perf-data/perf-html/: comparison_1.5.0dev-GCC620-64bit_vs_1.5.0dev-MSVC2015-64bit.html  comparison_1.5.0dev-GCC620-64bit_vs_1.9.9dev-GCC730-64bit.html  comparison_1.5.0dev-GCC620-64bit_vs_1.9.9dev-MSVC2017-64bit.html  comparison_1.5.0dev-MSVC2015-64bit_vs_1.5.0dev-GCC620-64bit.html  comparison_1.5.0dev-MSVC2015-64bit_vs_1.9.9dev-GCC730-64bit.html  comparison_1.5.0dev-MSVC2015-64bit_vs_1.9.9dev-MSVC2017-64bit.html  comparison_1.5.7dev-GCC730-64bit_vs_1.5.7dev-MSVC2017-64bit.html  comparison_1.5.7dev-GCC730-64bit_vs_1.9.9dev-GCC730-64bit.html  comparison_1.5.7dev-MSVC2017-64bit_vs_1.5.7dev-GCC730-64bit.html  comparison_1.5.7dev-MSVC2017-64bit_vs_1.9.9dev-GCC730-64bit.html  comparison_1.9.9dev-GCC730-64bit_vs_1.5.0dev-GCC620-64bit.html  comparison_1.9.9dev-GCC730-64bit_vs_1.5.0dev-MSVC2015-64bit.html  comparison_1.9.9dev-GCC730-64bit_vs_1.5.7dev-GCC730-64bit.html  comparison_1.9.9dev-GCC730-64bit_vs_1.5.7dev-MSVC2017-64bit.html  comparison_1.9.9dev-GCC730-64bit_vs_1.9.9dev-MSVC2017-64bit.html  comparison_1.9.9dev-MSVC2017-64bit_vs_1.5.0dev-GCC620-64bit.html  comparison_1.9.9dev-MSVC2017-64bit_vs_1.5.0dev-MSVC2015-64bit.html  comparison_1.9.9dev-MSVC2017-64bit_vs_1.9.9dev-GCC730-64bit.html  index.html  results_1.5.0dev-GCC620-64bit.html  results_1.5.0dev-MSVC2015-64bit.html  results_1.5.7dev-GCC730-64bit.html  results_1.5.7dev-MSVC2017-64bit.html  (+2 more)
